# DirectStreamGame

./: .gitignore  COMMUNITY_ROADMAP.md  Cargo.toml  FFMPEG-LGPL-COMPLIANCE.md  README.md  palette.example.toml  twitch.example.toml  vcpkg.json
assets/: palette.ipsi
assets/shaders/: palette_material_2d.wgsl
src/: app.rs  audio.rs  capture.rs  chat.rs  config.rs  constants.rs  custom_host.rs  demo.rs  direct_text.rs  direct_world_sprite.rs  frames.rs  gpu_palette.rs  lib.rs  main.rs  palette.rs  palette_lut.rs  plugin.rs  preview.rs  public_types.rs  scene.rs  stats.rs  stream_control.rs  twitch.rs  web.rs
src/default_pallette/: default_pallette.toml
tools/: generate_palette.mjs
